--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
+    <script src="shapes.js" type="text/javascript"></script>
+    <script src="controls.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
-    <script src="fadeyLine.js" type="text/javascript"></script>
 
     <style>
     body {
@@ -26,6 +26,8 @@
     </style>
   </head>
   <body>
-    <button onclick='addDots(10000)'>Add dots</button>
+    <button onclick='addDot()'>Add dot</button>
+    <button onclick='stopDrawing()'>Auto Mode</button>
+    <button onclick='startDrawing()'>Manual Mode</button>
   </body>
 </html>
