Add gui controls.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Chaos_Sierpinski</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
-
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="libraries/dat.gui.min.js" type="text/javascript"></script>
     <script src="shapes.js" type="text/javascript"></script>
     <script src="controls.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
@@ -26,8 +25,5 @@
     </style>
   </head>
   <body>
-    <button onclick='addDot()'>Add dot</button>
-    <button onclick='stopDrawing()'>Auto Mode</button>
-    <button onclick='startDrawing()'>Manual Mode</button>
   </body>
 </html>
