--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chaos_Sierpinski</title>
+    <link rel="stylesheet" type="text/css" href ="styles.css"/>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/dat.gui.min.js" type="text/javascript"></script>
@@ -10,19 +12,6 @@
     <script src="controls.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
-    <style>
-    body {
-			margin:0;
-			padding:0;
-			overflow: hidden;
-			background-color: black;
-		}
-  	canvas {
-      margin-left: auto;
-      margin-right: auto;
-      display: block;
-  	}
-    </style>
   </head>
   <body>
   </body>
